# sample_py

./: .coveragerc  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
sample_py/: cli.py
sample_py/area/: ellipse.py  polygon.py
sample_py/arith/: basic.py
src/sample_py/: runme.py
src/sample_py/area/: ellipse.py
step1/: runme.py
step2/: runme.py
step3/: polygon.py  runme.py
step4/arith/: basic.py
tests/: test_sample_py.py
