[tool.poetry]
name = "sample_py"
version = "0.1.0"
description = "Testing out dev workspace"
authors = ["Dave Puglielli <dpuglielli@flexion.us>"]

[tool.poetry.scripts]
sample_py = "sample_py.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
pydeps = "^1.10.18"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
toml = "^0.10.2"
yapf = "^0.32.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "facebook"